# ilex

./: Cargo.toml  README.md  check_msrv.nix
examples/: readme.rs
src/: element.rs  empty_element.rs  item.rs  lib.rs  other.rs  parsing.rs  traits.rs  util.rs
test_data/: tiny_people.xml
tests/: general.rs  unit.rs
